2015-02-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree.c (insert_into_contents): Update parent field of inserted 
	element.

2015-02-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* input.c, Parsetexi/Parsetexi.xs (add_include_directory): New 
	function.
	* Parsetexi/lib/Parsetexi.pm (parser): Call it.
	* input.c (input_push_file): Look through list of include 
	directories.

2015-02-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (abort_empty_line) <ET_empty_line>: Clear type of
	ET_empty_line element as intended, instead of deleting it.

2015-02-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* separator.c (register_command_arg): New function.
	(handle_close_brace, handle_comma) <brace commands with positive 
	number of args>: Call it.
	* extra.c (add_extra_key_contents_array): New function.

2015-02-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* command_data.txt <brace commands>: Add arg types for all 
	commands (some of these could change).

2015-02-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (process_remaining_on_line): Handle @verb.

2015-02-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (isolate_last_space, start_empty_line_after_command): 
	Add comments.
	(big_loop, process_remaining_on_line): Function renamed.
	<no brace after brace command>: Add commented-out code and 
	comment.
	* separator.c (handle_open_brace): Set "spaces_before_argument" 
	extra value.

2015-02-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (parse_line_command_args): More complete 
	implementation.
	(is_decimal_numer): New function split from 
	parse_line_command_args.

	* parser.c (read_command_name): Return null if not looking at a 
	valid command name.

2015-02-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* errors.c: New file.
	(line_error, line_errorf, dump_errors): New functions.
	* end_line.c (parse_line_command_args) <@sp>: Call line_errorf 
	if argument is malformed.
